--- a/.harness/pipelines/migrated.yaml
+++ b/.harness/pipelines/migrated.yaml
@@ -14,6 +14,9 @@ pipeline:
     - name: PYTHON_VERSION
       value: '3.9'
       type: Number
+    - name: JAVA_VERSION
+      value: '18.0'
+      type: Number
   stages:
     - stage:
         name: Build
