--- a/.harness/pipelines/migrated.yaml
+++ b/.harness/pipelines/migrated.yaml
@@ -1,65 +1,131 @@
-pipeline:
-  name: dev_backend___date_yyyymmdd___rev__r_
-  identifier: dev_backend___date_yyyymmdd___rev__r_
-  projectIdentifier: NodeJs
-  orgIdentifier: default
+template:
+  name: MigratedPipeline
+  identifier: MigratedPipeline
+  versionLabel: ''
+  type: stepGroup
+  projectIdentifier: default_project
+  orgIdentifier: default_org
   tags: {}
-  variables:
-    - name: ARTIFACT_NAME
-      value: backend-artifact-cu
-      type: String
-    - name: AZURE_WEBAPP_NAME
-      value: genai-cu-dev-webapp
-      type: String
-    - name: PYTHON_VERSION
-      value: '3.9'
-      type: Number
-    - name: JAVA_VERSION
-      value: '18.0'
-      type: Number
-  stages:
-    - stage:
-        name: Build
-        identifier: Build
-        type: CI
-        spec:
-          execution:
-            steps:
-              - step:
-                  name: 6d15af64-176c-496d-b583-fd2ae21d4df4@1
-                  identifier: 6d15af64_176c_496d_b583_fd2ae21d4df4_1
-                  type: Run
-                  spec:
-                    command: 6d15af64-176c-496d-b583-fd2ae21d4df4@1
-              - step:
-                  name: Set up Python $(PYTHON_VERSION)
-                  identifier: Set_up_Python_PYTHON_VERSION_
-                  type: Run
-                  spec:
-                    command: UsePythonVersion@0
-              - step:
-                  name: Install dependencies for backend
-                  identifier: Install_dependencies_for_backend
-                  type: Run
-                  spec:
-                    command: |-
-                      python -m pip install --upgrade pip
-                      pip install -r requirements.txt
-              - step:
-                  name: Archive files
-                  identifier: Archive_files
-                  type: Run
-                  spec:
-                    command: ArchiveFiles@2
-              - step:
-                  name: Publish Artifact
-                  identifier: Publish_Artifact
-                  type: Run
-                  spec:
-                    command: PublishBuildArtifacts@1
-          platform:
-            os: Linux
-            arch: Amd64
-          runtime:
-            type: Cloud
-            spec: {}
+  spec:
+    stageType: CI
+    steps:
+      - step:
+          type: Run
+          name: Install Node.js
+          identifier: Install_Node_js
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Install dependencies
+          identifier: Install_dependencies
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Replace tokens in environment.ts
+          identifier: Replace_tokens_in_environment_ts
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Replace tokens in assests-path.ts
+          identifier: Replace_tokens_in_assests_path_ts
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: 'Replace tokens in download-constants.ts '
+          identifier: Replace_tokens_in_download_constants_ts_
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Replace tokens in _variables.scss
+          identifier: Replace_tokens_in__variables_scss
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: 'Replace tokens in index.html '
+          identifier: Replace_tokens_in_index_html_
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: 'Replace tokens in global-constants.ts '
+          identifier: Replace_tokens_in_global_constants_ts_
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Build Application
+          identifier: Build_Application
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Copy dist folder and contents
+          identifier: Copy_dist_folder_and_contents
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Copy firebase.json
+          identifier: Copy_firebase_json
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Copy WEB deploy Script
+          identifier: Copy_WEB_deploy_Script
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Publish $(ENV) artifact
+          identifier: Publish___ENV__artifact
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Copy dist folder and contents_1
+          identifier: Copy_dist_folder_and_contents_2
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
+      - step:
+          type: Run
+          name: Publish $(ENV) artifact_1
+          identifier: Publish___ENV__artifact_2
+          spec:
+            connectorRef: ''
+            image: ''
+            shell: Sh
